// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderHeader function should return correct header when complete configuration 1`] = `"Connections, {nextUpdate} 45{units.seconds} @ 10:23:40"`;

exports[`renderHeader function should return correct header when incomplete configuration 1 1`] = `"Connections, {nextUpdate} 45{units.seconds}"`;

exports[`renderHeader function should return correct header when incomplete configuration 2 1`] = `"Connections @ 10:23:40"`;

exports[`renderHeader function should return simple string when silent configuration 1`] = `"Connections"`;

exports[`renderNoInfoVelib function should return correct HTML for table cell when no label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Stations {notYet}
   </td>
</tr>"
`;

exports[`renderNoInfoVelib function should return correct HTML for table row when label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Ulbach {notYet}
   </td>
</tr>"
`;

exports[`renderVelib function should return correct HTML when history with trend 1`] = `"<tr></tr>"`;

exports[`renderVelib function should return correct HTML when history without trend 1`] = `
"<tr>
   <td class=\\"align-left\\">
      10
   </td>
   <td class=\\"bright\\">
      2 {velib.bikes} 8 {velib.spaces}
   </td>
   <td class=\\"align-right\\">
      Opera
   </td>
   <td></td>
</tr>"
`;

exports[`renderVelib function should return correct HTML when no history 1`] = `
"<tr>
   <td class=\\"bright\\">
      Opera Bis {notYet}
   </td>
</tr>"
`;

exports[`renderWrapper function should return correct HTML 1`] = `"<div id=\\"IDFTransportWrapper\\" class=\\"IDFTransportWrapper\\"></div>"`;
